[package]
name = "layer8-middleware-rs"
# The versions have no bearing, only for the PoC before migrating to Org account
version = "0.1.17"
edition = "2021"
authors = ["Osoro Bironga <fanosoro@gmail.com>"]
repository = "github.com/muse254/layer8-middleware-rs"
license = "GNU GPLv2"
readme = "README.md"
categories = ["wasm"]

[profile.release]
codegen-units = 1
opt-level = "s"   # https://github.com/rustwasm/wasm-pack/issues/743#issuecomment-646700560
lto = true
debug = false
panic = "abort"

[lib]
crate-type = ["cdylib"]

[dependencies]
web-sys = { version = "0.3.70", features = ["File", "FormData"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
layer8-primitives = { git = "https://github.com/muse254/layer8-primitives-rs.git", branch = "main" } # TODO: Publish to crates.io
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.128"
base64 = { version = "0.22" }
js-sys = "0.3"
url = "2.5.2"
rand = { version = "0.8.5", features = ["small_rng"] }
form_urlencoded = "1.2.1"
mime-sniffer = "0.1.2"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
uuid = "1.10.0"
wasm-bindgen-test = "0.3"
jsonwebtoken = "9"
