[workspace]
members = ["middleware-wasm", "cli", "reverse-proxy"]
resolver = "2"

[profile.release.middleware-wasm]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
strip = "debuginfo"
targets = ["wasm32-unknown-unknown"]

# TODO: https://github.com/cloudflare/pingora/issues/568
[patch.crates-io]
sfv = { git = "https://github.com/undef1nd/sfv.git", tag = "v0.9.4" }
