[package]
name = "forward-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.86"
log = "0.4.25"
pingora-core = "0.4.0"
pingora-proxy = "0.4.0"
tokio = { version = "1.43.0", features = ["full"] }
env_logger = "0.11.6"
dotenv = "0.15.0"

[dev-dependencies]
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1"
